refactor: enrollment logic