@@ -1,15 +1,26 @@
 package org.example.service.business;
 
+import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
-import org.example.domain.dto.CourseInfo;
-import org.example.domain.dto.EnrollmentCourseResponse;
-import org.example.service.domain.*;
+import org.example.model.dto.CourseInfo;
+import org.example.model.enums.YearTarget;
+import org.example.service.domain.AcademicYearDomainService;
+import org.example.service.domain.CompletedCourseDomainService;
+import org.example.service.domain.CourseDomainService;
+import org.example.service.domain.EnrollmentFormDomainService;
+import org.example.service.domain.EnrollmentFormItemDomainService;
+import org.example.service.domain.StudentDomainService;
+import org.example.service.validator.EnrollmentSelectionValidator;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -24,41 +35,65 @@ public class EnrollmentService {
     private final EnrollmentFormDomainService enrollmentFormDomainService;
     private final CompletedCourseDomainService completedCourseDomainService;
     private final EnrollmentFormItemDomainService enrollmentFormItemDomainService;
+    private final EnrollmentSelectionValidator enrollmentSelectionValidator;
 
     public void enrollYear(Long studentId) {
-        var year = studentDomainService.getCurrentYearById(studentId);
-        if (year < 1 || year > 3) throw new RuntimeException("Unsupported study year: " + year);
-
-        var studyProgramId = studentDomainService.getStudyProgramIdByStudentId(studentId);
-        var activeYearId = academicYearDomainService.getActiveYearId();
-
-        var semStart = (year - 1) * 2 + 1;
-        var candidates = getCoursesToConsider(studentId, studyProgramId, year);
-        var minMax = getTargetsForYear(year, false); // TODO: detect final paper
-        allocateYearCourses(studentId, activeYearId, semStart, semStart + 1, candidates, minMax[0], minMax[1]);
+        enrollYear(studentId, List.of(), false);
     }
 
-    private int[] getTargetsForYear(int year, boolean hasFinalPaper) {
-        return switch (year) {
-            case 1 -> new int[]{60, 60};
-            case 2 -> new int[]{58, 62};
-            case 3 -> new int[]{58, hasFinalPaper ? 80 : 62};
-            default -> throw new RuntimeException("Unsupported year: " + year);
-        };
+    public void enrollYear(Long studentId, List<Long> selectedCourseIds, boolean allowHigherYearSelection) {
+        enrollmentSelectionValidator.validateEnrollment(studentId, selectedCourseIds, allowHigherYearSelection);
+
+        var year = studentDomainService.getCurrentYearById(studentId);
+        var studyProgramId = studentDomainService.getStudyProgramIdByStudentId(studentId);
+        var activeYearId = academicYearDomainService.getActiveYearId();
+        var semStart = (year - 1) * 2 + 1;
+
+        var candidates = getCoursesToConsider(studentId, studyProgramId, year);
+
+        var selectedCourseInfos = Optional.ofNullable(selectedCourseIds)
+                .stream()
+                .flatMap(List::stream)
+                .distinct()
+                .map(courseDomainService::getCourseInfoById)
+                .distinct()
+                .toList();
+
+        var selectedIds = selectedCourseInfos.stream().map(CourseInfo::id).collect(Collectors.toSet());
+
+        var mergedCandidates = Stream.concat(selectedCourseInfos.stream(), candidates.stream())
+                .filter(c -> !completedCourseDomainService.hasCompletedCourse(studentId, c.id()))
+                .distinct()
+                .sorted(Comparator
+                        .comparing((CourseInfo c) -> selectedIds.contains(c.id())).reversed()
+                        .thenComparingInt(CourseInfo::ects).reversed())
+                .toList();
+
+        var range = YearTarget.fromYear(year).getRange(false);
+
+        allocateYearCourses(
+                studentId,
+                activeYearId,
+                semStart,
+                semStart + 1,
+                mergedCandidates,
+                range.min(),
+                range.max()
+        );
     }
 
     private List<CourseInfo> getCoursesToConsider(Long studentId, Long studyProgramId, int year) {
         return switch (year) {
             case 1 -> courseDomainService.getMandatoryCoursesForSemesters(studyProgramId, List.of(1, 2)).stream()
                     .filter(c -> !completedCourseDomainService.hasCompletedCourse(studentId, c.id()))
-                    .collect(Collectors.toList());
+                    .toList();
             case 2 -> {
                 var year1 = courseDomainService.getMandatoryCoursesForSemesters(studyProgramId, List.of(1, 2));
                 var missingYear1 = year1.stream()
                         .filter(c -> !completedCourseDomainService.hasCompletedCourse(studentId, c.id()))
                         .toList();
                 var year2 = courseDomainService.getMandatoryCoursesForSemesters(studyProgramId, List.of(3, 4));
-                yield Stream.concat(missingYear1.stream(), year2.stream()).collect(Collectors.toList());
+                yield Stream.concat(missingYear1.stream(), year2.stream()).toList();
             }
             case 3 -> {
                 var remaining = getRemainingMandatoryForStudent(studentId, studyProgramId);
@@ -73,20 +108,21 @@ public class EnrollmentService {
     }
 
     private List<CourseInfo> getRemainingMandatoryForStudent(Long studentId, Long studyProgramId) {
-        var allMandatory = courseDomainService.getMandatoryCoursesForSemesters(studyProgramId, List.of(1,2,3,4,5,6));
+        var allMandatory = courseDomainService.getMandatoryCoursesForSemesters(studyProgramId, List.of(1, 2, 3, 4, 5, 6));
         return allMandatory.stream()
                 .filter(c -> !completedCourseDomainService.hasCompletedCourse(studentId, c.id()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private void allocateYearCourses(Long studentId,
-                                     Long activeYearId,
-                                     int sem1,
-                                     int sem2,
-                                     List<CourseInfo> candidates,
-                                     int minTarget,
-                                     int maxTarget) {
-
+    private void allocateYearCourses(
+            Long studentId,
+            Long activeYearId,
+            int sem1,
+            int sem2,
+            List<CourseInfo> candidates,
+            int minTarget,
+            int maxTarget
+    ) {
         var form1Id = enrollmentFormDomainService.createEmptyFormReturnId(studentId, activeYearId, sem1);
         var form2Id = enrollmentFormDomainService.createEmptyFormReturnId(studentId, activeYearId, sem2);
 
@@ -96,38 +132,122 @@ public class EnrollmentService {
                 .sorted(Comparator.comparingInt(CourseInfo::ects).reversed())
                 .toList();
 
-        var total = 0;
-        for (var course : toConsider) {
-            if (total >= minTarget) break;
-            var potentialTotal = total + course.ects();
-            if (potentialTotal > maxTarget && total >= minTarget) continue;
+        var semToForm = Map.of(sem1, form1Id, sem2, form2Id);
 
-            Long targetFormId;
-            if (course.semester() == sem1) targetFormId = form1Id;
-            else if (course.semester() == sem2) targetFormId = form2Id;
-            else {
-                var load1 = enrollmentFormItemDomainService.getTotalEctsForForm(form1Id);
-                var load2 = enrollmentFormItemDomainService.getTotalEctsForForm(form2Id);
-                targetFormId = load1 <= load2 ? form1Id : form2Id;
-            }
+        var load1 = new AtomicInteger(enrollmentFormItemDomainService.getTotalEctsForForm(form1Id));
+        var load2 = new AtomicInteger(enrollmentFormItemDomainService.getTotalEctsForForm(form2Id));
+        var total = new AtomicInteger(0);
 
-            enrollmentFormDomainService.addItemByFormId(targetFormId, course.id());
-            total += course.ects();
-        }
+        toConsider.stream()
+                .takeWhile(c -> total.get() < minTarget)
+                .forEach(course -> {
+                    var potentialTotal = total.get() + course.ects();
+                    Optional.of(potentialTotal)
+                            .filter(t -> t <= maxTarget)
+                            .ifPresent(t -> {
+                                var targetFormId = Optional.ofNullable(semToForm.get(course.semester()))
+                                        .orElseGet(() -> (load1.get() <= load2.get()) ? form1Id : form2Id);
+
+                                enrollmentFormDomainService.addItemByFormId(targetFormId, course.id());
+
+                                Optional.of(targetFormId.equals(form1Id))
+                                        .filter(Boolean::booleanValue)
+                                        .ifPresentOrElse(
+                                                b -> load1.addAndGet(course.ects()),
+                                                () -> load2.addAndGet(course.ects())
+                                        );
+
+                                total.addAndGet(course.ects());
+                            });
+                });
     }
 
-    public List<EnrollmentCourseResponse> getEnrolledCoursesForYear(Long studentId) {
+    public List<CourseInfo> getEnrolledCoursesForYear(Long studentId) {
         var year = studentDomainService.getCurrentYearById(studentId);
         var sem1 = year * 2 - 1;
         var sem2 = year * 2;
 
-        var formIds = List.of(
-                enrollmentFormDomainService.getEnrollmentFormId(studentId, sem1),
-                enrollmentFormDomainService.getEnrollmentFormId(studentId, sem2)
-        );
+        var formIds = Stream.of(sem1, sem2)
+                .map(sem -> enrollmentFormDomainService.getEnrollmentFormId(studentId, sem))
+                .toList();
 
         return formIds.stream()
                 .flatMap(formId -> enrollmentFormItemDomainService.getEnrollmentFormItems(formId).stream())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Long saveSelection(Long studentId, List<Long> selectedCourseIds, boolean allowHigherYearSelection) {
+        enrollmentSelectionValidator.validateEnrollment(studentId, selectedCourseIds, allowHigherYearSelection);
+        return createOrUpdateSelectionForStudent(studentId, selectedCourseIds);
+    }
+
+    public List<CourseInfo> getSelection(Long studentId) {
+        return Optional.ofNullable(getCurrentEnrollmentFormId(studentId))
+                .map(enrollmentFormItemDomainService::getEnrollmentFormItems)
+                .orElse(List.of());
+    }
+
+    public Long getCurrentEnrollmentFormId(Long studentId) {
+        var year = studentDomainService.getCurrentYearById(studentId);
+        var activeYearId = academicYearDomainService.getActiveYearId();
+        var semStart = (year - 1) * 2 + 1;
+
+        return enrollmentFormDomainService.findCurrentFormIdForStudent(studentId, activeYearId, semStart)
+                .orElse(null);
+    }
+
+    @Transactional
+    public Long createOrUpdateSelectionForStudent(Long studentId, List<Long> selectedCourseIds) {
+        var year = studentDomainService.getCurrentYearById(studentId);
+        var activeYearId = academicYearDomainService.getActiveYearId();
+        var semStart = (year - 1) * 2 + 1;
+        var sems = List.of(semStart, semStart + 1);
+
+        var selectedDistinct = Optional.ofNullable(selectedCourseIds)
+                .stream()
+                .flatMap(List::stream)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+
+        var courseById = selectedDistinct.stream()
+                .map(courseDomainService::getCourseInfoById)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toMap(CourseInfo::id, c -> c));
+
+        var bySem = courseById.values().stream()
+                .filter(ci -> sems.contains(ci.semester()))
+                .collect(Collectors.groupingBy(
+                        CourseInfo::semester,
+                        Collectors.mapping(CourseInfo::id, Collectors.toList())
+                ));
+
+        sems.forEach(sem -> {
+            var formId = enrollmentFormDomainService.findOrCreateFormId(studentId, activeYearId, sem);
+
+            var existingCourseIds = enrollmentFormItemDomainService.getEnrollmentFormItems(formId).stream()
+                    .map(CourseInfo::id)
+                    .collect(Collectors.toSet());
+
+            var targetCourseIds = Optional.ofNullable(bySem.get(sem)).orElse(List.of());
+
+            var toAddIds = targetCourseIds.stream()
+                    .filter(id -> !existingCourseIds.contains(id))
+                    .toList();
+
+            var toRemoveIds = existingCourseIds.stream()
+                    .filter(id -> !targetCourseIds.contains(id))
+                    .toList();
+
+            Optional.of(toRemoveIds)
+                    .filter(l -> !l.isEmpty())
+                    .ifPresent(l -> enrollmentFormItemDomainService.deleteByFormAndCourseIds(formId, l));
+
+            Optional.of(toAddIds)
+                    .filter(l -> !l.isEmpty())
+                    .ifPresent(l -> enrollmentFormItemDomainService.saveItemsForForm(formId, l));
+        });
+
+        return enrollmentFormDomainService.findOrCreateFormId(studentId, activeYearId, semStart);
     }
 }
